Add utils, dtos, services, swagger

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,8 @@
+server:
+  port: 8080
+jwt:
+  secret: 383jf23zae2j9322fj39f39ffuckkk9r5632fjwt
+  lifetime: 30m
 spring:
   application:
     name: api-tm
@@ -7,3 +12,7 @@ spring:
     username: postgres
     password: postgres
     url: jdbc:postgresql://localhost:5432/tm
+  security:
+    user:
+      name: user
+      password: user
